--- a/static/css/public/output.css
+++ b/static/css/public/output.css
@@ -57,12 +57,12 @@ html {
 2. Inherit line-height from `html` so users can set them as a class directly on the `html` element.
 */
 
-body {
+ body {
   margin: 0;
-  /* 1 */
+ 
   line-height: inherit;
-  /* 2 */
-}
+  border: 1px solid red;
+} 
 
 /*
 1. Add the correct height in Firefox.
