--- a/templates/account/authenticate.html
+++ b/templates/account/authenticate.html
@@ -5,8 +5,12 @@
 <div class="container-1">
     <div class="container-2">
         <a href="signup/employer" class="box-1">SIGN UP AS AN EMPLOYER</a>
+    </div>
+    <br> <br>
+    <div class="container-2">
         <a href="signup/employee" class="box-2">SIGN UP AS AN EMPLOYEE</a>
-        <br>   
+    </div>
+        <br><br>   
     <div class="container-3">
        <a href="login" class="box-3">LOGIN</a>
     </div>
