--- a/templates/navbar.html
+++ b/templates/navbar.html
@@ -18,10 +18,10 @@
                     <a href="employee/" class=" text-xl hover:text-white hover:bg-blue-400">FIND JOB</a>
                 </li>
                 <li class="mx-4">
-                    <a href="" class=" text-xl hover:text-white hover:bg-blue-400">ABOUT US</a>
+                    <a href="{% url 'about' %}" class=" text-xl hover:text-white hover:bg-blue-400">ABOUT US</a>
                 </li>
                 <li class="mx-4">
-                    <a href="" class=" text-xl hover:text-white hover:bg-blue-400">CONTACT US</a>
+                    <a href="{% url 'contact' %}" class=" text-xl hover:text-white hover:bg-blue-400">CONTACT US</a>
                 </li>
                 <li class="mx-4">
                     <a href="account/login" class=" text-xl hover:text-white hover:bg-blue-400">LOGIN</a>
