--- a/templates/apply.html
+++ b/templates/apply.html
@@ -88,9 +88,7 @@
     <form action="{% url 'apply_job' %}" method="POST">
       {% csrf_token %}
       <label for="job-title">Job Title:</label>
-<<<<<<< HEAD
       <input type="text" id="job-title" name="job-title" value="Senior Software Engineer" readonly><br><br>
-=======
       <input type="text" id="job-title" name="job_title" readonly><br><br>
 
       <label for="resume">Resume:</label>
@@ -104,7 +102,7 @@
   </section>
 
   <footer>
-    <p>&copy; 2023 JobKonnect. All rights reserved. | <a href="privacy.html">Privacy Policy</a> | <a href="terms.html">Terms of Service</a></p>
+    <p>&copy; 2023 JobKonnect. All rights reserved. | <a href="{% url 'privacy' %}">Privacy Policy</a> | <a href="{% url 'contact' %}">Contact Us</a> | <a href="{% url 'contact' %}">Contact Us</a> | <a href="{% url 'terms' %}">Terms of service</a></p>
   </footer>
 
   <script>
