--- a/templates/base.html
+++ b/templates/base.html
@@ -15,6 +15,7 @@
       text-align: center;
       margin-bottom: 0px;
       margin-top: 100%;
+      height: 150px;
       }
 
     footer a {
@@ -37,7 +38,7 @@
       {% endblock %}
       <div class="footer">
              <footer>
-    <p>&copy; 2023 JobKonnect. All rights reserved. | <a href="privacy.html">Privacy Policy</a> | <a href="terms.html">Terms of Service</a></p>
+    <p>&copy; 2023 JobKonnect. All rights reserved. | <a href="{% url 'privacy' %}">Privacy Policy</a> | <a href="{% url 'terms' %}">Terms of Service</a> | <a href="{% url 'about' %}">About Us</a> | <a href="{% url 'contact' %}">Contact Us</a></p>
   </footer>
       <!-- {% include 'footer.html'%} -->
       </div>
