--- a/templates/contact.html
+++ b/templates/contact.html
@@ -49,12 +49,12 @@
   <header>
     <nav>
       <a href= '/' target="_blank">Home</a>
-      <a href="{ url 'employer/post_job'}" target="_blank">Post Job</a>
-      <a href="jobs.html" target="_blank">Find Job</a>
-      <a href="jobs.html" target="_blank">About UsJobs</a>
-      <a href="contact.html" target="_blank">Contact Us</a>
-      <a href="jobs.html" target="_blank">Login</a>
-      <a href="jobs.html" target="_blank">Signup</a>
+      <a href="employer/post_job" target="_blank">Post Job</a>
+      <a href="employee/apply_job" target="_blank">Find Job</a>
+      <a href="{ url '/about'}" target="_blank">About Us</a>
+      <a href="{ url '/contact'}" target="_blank">Contact Us</a>
+      <a href="{ url '/account/login'}" target="_blank">Login</a>
+      <a href="account/signup" target="_blank">Signup</a>
     </nav>
     {% comment %} <div>
     {% include 'navbar.html'%}
