--- a/templates/index.html
+++ b/templates/index.html
@@ -2,6 +2,7 @@
 {% load static%}
 <link rel="stylesheet" href="{% static '/css/public/output.css' %}">
 {% block body %}
+<div class="py-4">
 <div class="mt-26 mb-11 w-11/12 h-screen relative left-10 text-white">
     <div class="class=" relative mr-16 mx-px-8 flex h-screen ">
             <h1 class="float-left font-serif text-6xl my-8 ">
@@ -39,3 +40,4 @@ hello
  <!-- <div class="flex">
                 <img src="" class="flex-auto w-32">
             </div> -->
+</div>
