--- a/templates/navbar.html
+++ b/templates/navbar.html
@@ -1,40 +1,18 @@
 {% load static%}
-<link rel="stylesheet" href="{% static '/css/public/output.css' %}">
+<link rel="stylesheet" href="{% static '/css/index.css' %}">
 {% block body %}
-<div  class="text-white p-5 ">
-    <nav class=" md:flex md:items-center md:justify-between bg-blue-400">
-        <div>
-            <span class="text-2xl font-[poppers] cursor-pointer ">JOBKONNECT</span>
-        </div>
-        <div>
-            <ul class="md:flex md:items-center font-serif">
-                <li class="mx-4">
-                    <a href="/" class=" text-xl hover:text-white hover:bg-blue-400">HOME</a>
-                </li>
-                <li class="mx-4">
-                    <a href="employer/post_job" class=" text-xl hover:text-white hover:bg-blue-400">POST JOB</a>
-                </li>
-                <li class="mx-4">
-                    <a href="employee/" class=" text-xl hover:text-white hover:bg-blue-400">FIND JOB</a>
-                </li>
-                <li class="mx-4">
-                    <a href="{% url 'about' %}" class=" text-xl hover:text-white hover:bg-blue-400">ABOUT US</a>
-                </li>
-                <li class="mx-4">
-                    <a href="{% url 'contact' %}" class=" text-xl hover:text-white hover:bg-blue-400">CONTACT US</a>
-                </li>
-                <li class="mx-4">
-                    <a href="account/login" class=" text-xl hover:text-white hover:bg-blue-400">LOGIN</a>
-                </li>
-                
-                <li class="mx-4">
-                    <a href="account/" class=" text-xl hover:text-white hover:bg-blue-400">Signup</a>
-                </li>
-            </ul>
-        </div>
-    </nav>
-</div>
-{% endblock %}
+<nav class="nav-bar">
+    <span class="logo">JOBKONNECT</span>
+    <ul class="nav-list">
+        <li class="nav-item" ><a href="index.php">HOME</a></li >
+        <li class="nav-item"><a href="job.php">POST JOB</a></li >
+        <li class="nav-item"><a href="company.php">FIND JOB</a></li >
+        <li class="nav-item"><a href="login.php">ABOUT US</a></li >
+        <li class="nav-item"><a href="register.php">CONTACT US</a></li >
+        <li class="nav-item"><button ><a href="login.html" class="buttons">LOGIN</a></button></li >
+        <li class="nav-item"><button ><a href="register.html" class="buttons">REGISTER</a></button></li >
+    </ul>
+</nav>
 
 
 
