--- a/templates/navbar.html
+++ b/templates/navbar.html
@@ -4,15 +4,13 @@
 <nav class="nav-bar">
     <span class="logo">JOBKONNECT</span>
     <ul class="nav-list">
-        <li class="nav-item" ><a href="index.php">HOME</a></li >
-        <li class="nav-item"><a href="job.php">POST JOB</a></li >
-        <li class="nav-item"><a href="company.php">FIND JOB</a></li >
-        <li class="nav-item"><a href="login.php">ABOUT US</a></li >
-        <li class="nav-item"><a href="register.php">CONTACT US</a></li >
-        <li class="nav-item"><button ><a href="login.html" class="buttons">LOGIN</a></button></li >
-        <li class="nav-item"><button ><a href="register.html" class="buttons">REGISTER</a></button></li >
+        <li class="nav-item" ><a href="/">HOME</a></li >
+        <li class="nav-item"><a href="/employer/post_job">POST JOB</a></li >
+        <li class="nav-item"><a href="/employee/">FIND JOB</a></li >
+        <li class="nav-item"><a href="/about/">ABOUT US</a></li >
+        <li class="nav-item"><a href="/contact/">CONTACT US</a></li >
+        <li class="nav-item"><button ><a href="/account/login" class="buttons">LOGIN</a></button></li >
+        <li class="nav-item"><button ><a href="/account/" class="buttons">REGISTER</a></button></li >
     </ul>
 </nav>
-
-
-
+{% endblock %}
