--- a/static/css/login.css
+++ b/static/css/login.css
@@ -4,8 +4,9 @@ main {
     justify-content: center;
     margin-left: 35%;
     margin-top: 10%;
-    border:2px solid rgb(204, 204, 204);
-    background-color: brown;
+    border:2px solid #000000;
+    border-radius: 4px;
+    background-color: #f2f2f2;
     text-align: center;
   }
   
