--- a/templates/account/employee.html
+++ b/templates/account/employee.html
@@ -8,18 +8,29 @@
   <style>
     body {
       font-family: Arial, sans-serif;
+      background-color: #fff;
     }
     
     .container {
       display: flex;
       justify-content: center;
       align-items: center;
-      height: 100vh;
+      min-height: 100vh;
+      margin-left: 20%;
+      margin-right: 20%;
+      margin-top: 0%;
+      margin-bottom: 0%;
+      background-color: #fff;
+      border: 2px solid #000000;
+      border-radius: 4px;
     }
     
-    .signup-column {
+    {% comment %} .signup-column {
       flex: 1;
       padding: 20px;
+    } {% endcomment %}
+    h1 {
+      text-align: center;
     }
     
     h2 {
@@ -27,21 +38,25 @@
     }
     
     input[type="text"], input[type="password"] {
-      width: 100%;
-      padding: 10px;
+      width: 40%;
+      padding: 20px;
       margin-bottom: 10px;
       border: 1px solid #ccc;
       border-radius: 4px;
+      margin-left:30%;
+      margin-right: 30%;
     }
     
     button[type="submit"] {
-      width: 100%;
+      width: 20%;
       padding: 10px;
       background-color: #4CAF50;
       color: white;
       border: none;
       border-radius: 4px;
       cursor: pointer;
+      margin-right: 40%;
+      margin-left: 40%;
     }
     
     .signup-column:nth-child(odd) {
