--- a/templates/account/employer.html
+++ b/templates/account/employer.html
@@ -1,59 +1,11 @@
 {% extends 'base.html' %}
-
 {% block body %}
 {% load static %}
 <!DOCTYPE html>
 <html>
 <head>
   <title>JobKonnect Signup</title>
-  <style>
-    body {
-      font-family: Arial, sans-serif;
-      background-color: #ffffff
-    }
-    
-    .container {
-      display: flex;
-      justify-content: center;
-      align-items: center;
-      height: 100vh;
-    }
-    
-    .signup-column {
-      flex: 1;
-      padding: 20px;
-    }
-
-    h1 {
-      text-align: center;
-      font-color: red;
-      font-weight: bold;
-    }
-    
-    h2 {
-      text-align: center;
-    }
-    
-    input[type="text"], input[type="password"] {
-      width: 100%;
-      padding: 10px;
-      margin-bottom: 10px;
-      border: 1px solid #ccc;
-      border-radius: 4px;
-    }
-    
-    button[type="submit"] {
-      width: 75%;
-      padding: 10px;
-      background-color: #4CAF50;
-      color: white;
-      border: none;
-      border-radius: 4px;
-      cursor: pointer;
-     
-    }
-    
-  </style>
+   <link rel="stylesheet" href="{% static 'css/employer.css'%}">
   <script>
     window.onload = function() {
       var passwordInput = document.getElementById("password");
@@ -76,12 +28,12 @@
   </script>
 </head>
 <body>
-  <h1>Create an Account</h1>
+  
   <div class="container">
     <div class="signup-column">
-      <h2>Employer</h2>
       <form action="employer" method="post">
         {% csrf_token %}
+        <h1>CREATE ACCOUNT AS AN EMPLOYER</h1>
         <input type="text" name="firstname" placeholder="First Name" required><br>
         <input type="text" name="lastname" placeholder="Last Name" required><br>
         <input type="text" name="email" placeholder="Email" required><br>
@@ -89,7 +41,7 @@
         <input type="phonenumber" name="phonenumber" placeholder="Phone" required><br>
         <input type="password" id="password" name="password" placeholder="Password" required><br>
         <input type="password" id="confirm_password" name="confirm_password" placeholder="Confirm Password" required><br>
-        <button type="submit">Sign Up</button>
+        <button type="submit"class="sign-up-button">Sign Up</button>
       </form>
     </div>
   </div>
