edited index.htnl styling

--- a/templates/account/employee.html
+++ b/templates/account/employee.html
@@ -25,10 +25,10 @@
       border-radius: 4px;
     }
     
-    {% comment %} .signup-column {
+     .signup-column {
       flex: 1;
       padding: 20px;
-    } {% endcomment %}
+    }
     h1 {
       text-align: center;
     }
