--- a/static/css/footer.css
+++ b/static/css/footer.css
@@ -1,12 +1,14 @@
-.footer {
+footer {
     background-color: #333;
     color: #fff;
     padding: 10px;
     text-align: center;
     margin-bottom: 0%;
+    margin-top: auto;
+
   }
 
-  .footer a {
+  footer a {
     color: #fff;
     text-decoration: none;
     margin-right: 10px;
