--- a/static/css/index.css
+++ b/static/css/index.css
@@ -43,6 +43,7 @@ button{
     margin-left: 4%;
     height: 100vh;
     margin-top: 20px;
+    margin-bottom: 10%;
 }
 .container-2{
     display: flex;
@@ -61,7 +62,6 @@ button{
     display: flex;
     justify-content: space-between;
     margin-top: 20px;
-    /* background-color: blueviolet; */
     height: 50%;
 }
 .title-2{
