--- a/static/css/index.css
+++ b/static/css/index.css
@@ -9,6 +9,7 @@
     background-color: black;
     color: white;
     border-bottom: 1px solid white;  
+    margin-top: 0%;
 }
 .logo{
     /* color: white; */
