--- a/templates/about.html
+++ b/templates/about.html
@@ -1,53 +1,25 @@
+{% load static %}
 <!DOCTYPE html>
 <html>
 <head>
   <title>About Us - JobKonnect</title>
-  <style>
-    body {
-      margin: 20px;
-    }
-
-    header {
-      background-color: #00bdfe;
-      color: #fff;
-      padding: 20px;
-    }
-
-    h1 {
-      font-size: 24px;
-      margin-bottom: 20px;
-    }
-    nav a {
-      color: #fff;
-      text-decoration: none;
-      margin-right: 10px;
-      font-weight: bold;
-    }
-    footer {
-      background-color: #333;
-      color: #fff;
-      padding: 10px;
-      text-align: center;
-    }
-
-    footer a {
-      color: #fff;
-      text-decoration: none;
-      margin-right: 10px;
-    }
-  </style>
+  <link rel="stylesheet" href="{% static 'css/about.css'%}">
+  <link rel="stylesheet" href="{% static '/css/index.css' %}">
 </head>
 <body>
-  <header>
-    <h1>JobKonnect</h1>
-    <nav>
-      <a href="/">Home</a>
-      <a href="{ url 'employer/post_job' }">Post Job</a>
-      <a href="{ url 'employee/apply_job' }">Find Job</a>
-      <a href="contact.html">Contact Us</a>
-    </nav> 
-  </header>
-
+  <nav class="nav-bar">
+    <span class="logo">JOBKONNECT</span>
+    <ul class="nav-list">
+        <li class="nav-item" ><a href="/">HOME</a></li >
+        <li class="nav-item"><a href="/employer/post_job">POST JOB</a></li >
+        <li class="nav-item"><a href="/employee/">FIND JOB</a></li >
+        <li class="nav-item"><a href="/about/">ABOUT US</a></li >
+        <li class="nav-item"><a href="/contact/">CONTACT US</a></li >
+        <li class="nav-item"><button ><a href="/account/login" class="buttons">LOGIN</a></button></li >
+        <li class="nav-item"><button ><a href="/account/" class="buttons">REGISTER</a></button></li >
+    </ul>
+</nav>
+<div class="container">
   <section>
     <h2>About JobKonnect</h2>
     <p>
@@ -74,7 +46,7 @@
       We value your feedback and are available to address any questions or concerns you may have. Please don't hesitate to reach out to our dedicated support team via email at <a href="mailto:jobkonnect@gmail.com">info@jobkonnect.com</a> or call us at <a href="tel:+254719728369">+254719728369 </a>. We look forward to assisting you!
     </p>
   </section>
-
+</div>
   <footer>
     <p>&copy; 2023 JobKonnect. All rights reserved. | <a href="{% url 'privacy' %}">Privacy Policy</a> | <a href="{% url 'about' %}">About Us</a> | <a href="{% url 'contact' %}">Contact Us</a> | <a href="{% url 'terms' %}">Terms of service</a></p>
   </footer>
