--- a/static/css/footerl.css
+++ b/static/css/footerl.css
@@ -7,6 +7,9 @@ footer {
     /* margin-bottom: auto;
     margin-top: auto; */
     height: 150px;
+    position: fixed;
+    left: 0;
+    bottom: 0;
     width: 100%;
 
   }
