--- a/static/css/index.css
+++ b/static/css/index.css
@@ -14,7 +14,6 @@
     font-weight: bold;
 }
 .logo{
-    /* color: white; */
     font-size: 40px;
     font-weight: bold;
 }
@@ -23,7 +22,6 @@
     display: inline-block;
     margin-left: 30px; 
     margin-right: 10px;
-    /* text-decoration: none; */
     color: white;
 }
 .nav-item{
@@ -42,7 +40,6 @@ button{
 }
 .container-1{
     max-width: 95%;
-    /* background-color: brown; */
     margin-left: 4%;
     height: 100vh;
     margin-top: 20px;
@@ -53,7 +50,6 @@ button{
     justify-content: space-between;
 }
 .title-1{
-    /* color: white; */
     font-size: 40px;
     font-weight: bold;
 }
@@ -68,7 +64,6 @@ button{
     height: 50%;
 }
 .title-2{
-    /* color: white; */
     font-size: 20px;
     font-family: Arial, Helvetica, sans-serif;
 }
@@ -103,36 +98,34 @@ a:hover{
     color: grey;
 }
 
-/* last section css */
-
-/* .image-with-text {
+.image-with-text {
     display: flex;
     align-items: center;
-    justify-content: center;
-  }
-  
-  .image-container {
-    flex: 1;
-    text-align: center;
-  }
-  
-  .image-container img {
-    max-width: 100%;
+}
+
+.image-container {
+    flex: 0 0 50%;
+}
+.image-container img {
+    width: 90%;
     height: auto;
-  }
-  
-  .text-container {
-    flex: 1;
-    padding: 20px;
-  }
-  
-  .text-container h2 {
+    margin-left: 70px;
+    margin-bottom: 50px;
+}
+
+.text-container {
+    flex: 0 0 50%;
+    margin-left: 10px; 
+}
+
+.text-container h2 {
     font-size: 24px;
+    font-weight: bold;
     margin-bottom: 10px;
-  }
-  
-  .text-container p {
+   
+}
+
+.text-container p {
     font-size: 16px;
     line-height: 1.5;
-  }
-   */
+}
